# bedrock_sso_proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  E2E_CLIENT.md  FRONTEND.md  README.md  TODO.md  aws_pricing.json  bedrock_pricing.csv  bedrock_pricing_scraper.py  build.rs  clean-all.sh  config.yaml.example  docker-compose.yml  models.json  openapi.json
.github/workflows/: ci.yml  release.yml
examples/: cost_tracking_demo.rs  dummy_data_generator.rs  e2e_client.rs  generate_admin_token.rs  pricing_demo.rs  typed_cache_usage.rs
frontend/: .eslintrc.cjs  LOGGING.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/admin/: SystemUsage.tsx  UserManagement.tsx
frontend/src/components/apikeys/: ApiKeyCard.tsx  ApiKeyManagement.tsx  CreateApiKeyModal.tsx  index.ts
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/usage/: UsageFilters.tsx  UsageRecords.tsx  UsageStats.tsx  UsageSummaryCharts.tsx  UsageTracking.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useProviders.ts
frontend/src/hooks/api/: api-keys.ts  auth.ts  index.ts  usage.ts
frontend/src/hooks/api/admin/: audit-logs.ts  costs.ts  index.ts  usage.ts  users.ts
frontend/src/lib/: api-client.ts  react-query.ts
frontend/src/pages/: CallbackPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/pages/admin/: AdminPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.ts  usage.ts
frontend/src/utils/: logger.ts
migrations/pgsql/: 000_migration_tracking.sql  001_initial_schema.sql  002_usage_tracking.sql  003_api_keys.sql
migrations/sqlite/: 000_migration_tracking.sql  001_initial_schema.sql  002_usage_tracking.sql  003_api_keys.sql
src/: auth.rs  aws.rs  aws_http.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  server.rs  shutdown.rs  test_utils.rs
src/anthropic/: mod.rs  model_mapping.rs  transform.rs
src/auth/: api_key.rs  cache.rs  config.rs  jwt.rs  middleware.rs  mod.rs  oauth.rs  request_context.rs
src/auth/oauth/: flows.rs  health.rs  mod.rs  providers.rs  service.rs  state.rs
src/aws/: bedrock.rs  config.rs  mock.rs  mod.rs  model_id_mapping.rs
src/cache/: config.rs  memory.rs  mod.rs  redis.rs  typed.rs  types.rs
src/cache/counter/: memory.rs  mod.rs  redis.rs
src/cache/object/: memory.rs  mod.rs  redis.rs
src/commands/: init.rs  job.rs  maintenance.rs  migrate.rs  mod.rs
src/components/admin/: AuditLogs.tsx  CostManagement.tsx  UserManagement.tsx
src/cost/: mod.rs  parser.rs  routes.rs
src/cost_tracking/: aws_pricing.rs  mod.rs  parser.rs  routes.rs
src/database/: config.rs  mod.rs
src/database/dao/: api_keys.rs  api_keys_cached.rs  audit_logs.rs  cached.rs  cached_integration_test.rs  mod.rs  model_costs.rs  model_costs_cached.rs  refresh_tokens.rs  usage.rs  users.rs  users_cached.rs
src/database/entities/: api_keys.rs  audit_logs.rs  mod.rs  model_costs.rs  refresh_tokens.rs  usage_records.rs  usage_summaries.rs  users.rs
src/database/migration/: m20241226_120000_create_users_table.rs  m20241226_120100_create_refresh_tokens_table.rs  m20241226_120200_create_audit_logs_table.rs  m20241226_120300_create_usage_records_table.rs  m20241226_120400_create_usage_summaries_table.rs  m20241226_120500_create_model_costs_table.rs  m20241226_120600_create_api_keys_table.rs  m20250127_000001_add_cache_token_fields.rs  m20250804_000001_add_user_state_column.rs  m20250804_000002_add_oauth_check_column.rs  m20250806_135819_add_cache_tokens_to_summaries.rs  m20250806_140000_add_stop_reason_to_usage_records.rs  mod.rs
src/graphql/: context.rs  mod.rs  query.rs  schema.rs
src/jobs/: cleanup.rs  mod.rs  scheduler.rs  summaries.rs
src/middleware/: mod.rs  request_id.rs
src/model_service/: aws_http.rs  mod.rs  streaming.rs  tests.rs  types.rs  usage.rs  usage_tracking.rs
src/pages/admin/: AdminPage.tsx
src/routes/: anthropic.rs  api_keys.rs  audit_logs.rs  auth.rs  bedrock.rs  cost.rs  docs.rs  frontend.rs  graphql.rs  health.rs  mod.rs  usage.rs  users.rs
src/server/: config.rs  mod.rs  route_builder.rs
src/storage/: blackhole.rs  database.rs  factory.rs  integration_tests.rs  memory.rs  migrations.rs  mod.rs  postgres.rs  query_builder.rs  redis.rs  sqlite.rs
src/summarization/: aggregator.rs  config.rs  mod.rs  service.rs
src/usage_tracking/: integration_tests.rs  mod.rs  routes.rs
src/utils/: mod.rs  request_id.rs
tests/: api_key_integration_tests.rs  cache_sharing_test.rs  cached_integration_test.rs  cost_integration_tests.rs  cost_tracking_integration_tests.rs  integration_tests.rs  jwt_integration_tests.rs  model_cost_cache_integration_tests.rs  oauth_integration_tests.rs  redis_cache_integration_tests.rs  security_tests.rs  storage_integration_tests.rs  stream_integration_test.rs  summarization_integration_tests.rs  usage_integration_tests.rs  usage_tracking_integration_tests.rs
tests/common/: mod.rs
tests/fixtures/: bedrock-pricing.html  invoke-out.json
tests/fixtures/frontend/: index.html
tests/fixtures/frontend/assets/: index-test123.css
typed_cache_macro/: Cargo.toml
typed_cache_macro/src/: lib.rs
