[package]
name = "bedrock_sso_proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bedrock_proxy"
path = "src/main.rs"

[[bin]]
name = "bedrock_e2e_client"
path = "src/bin/e2e_client.rs"

[dependencies]
axum = { version = "^0.8", features = ["ws"] }
tokio = { version = "^1.0", features = ["full"] }
tokio-tungstenite = "^0.27"
reqwest = { version = "^0.12", features = ["json", "stream"] }
aws-sigv4 = "^1.0"
aws-credential-types = "^1.0"
aws-smithy-runtime-api = "^1.0"
url = "^2.5"
bytes = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
jsonwebtoken = "^9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
futures-util = "^0.3"
tokio-stream = "^0.1"
config = "^0.15"
clap = { version = "^4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "^0.4"
tempfile = "^3.0"
tower = "^0.5"
hyper = "^1.6"
axum-test = "^17.3"
urlencoding = "^2.1"
futures-util = "^0.3"
base64 = "^0.22"
serial_test = "^3.0"
