[package]
name = "bedrock_sso_proxy"
version = "0.1.0"
edition = "2024"
default-run = "bedrock_proxy"
build = "build.rs"

[[bin]]
name = "bedrock_proxy"
path = "src/main.rs"

[features]
default = []
frontend = []
tests = []

[dependencies]
axum = "^0.8"
tower-http = { version = "^0.6", features = ["fs", "cors", "trace"] }
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
aws-sigv4 = "^1.0"
aws-credential-types = "^1.0"
aws-smithy-runtime-api = "^1.0"
url = "^2.5"
bytes = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
jsonwebtoken = "^9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
futures-util = "^0.3"
tokio-stream = "^0.1"
config = "^0.15"
clap = { version = "^4.0", features = ["derive"] }
base64 = "^0.22"
regex = "^1.0"
rust_decimal = "^1.36"
once_cell = "^1.0"

# Metrics and production dependencies
metrics = "^0.23"
metrics-exporter-prometheus = "^0.15"

# OAuth dependencies
oauth2 = "^4.4"
uuid = { version = "^1.0", features = ["v4", "serde"] }
dashmap = "^6.1"
sha2 = "^0.10"
async-trait = "^0.1"
rust-embed = { version = "^8.0", features = ["include-exclude"] }

# Storage dependencies
redis = { version = "^0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json"] }

[build-dependencies]
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.12", features = ["json"] }
serde_json = "^1.0"
once_cell = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "^0.4"
tower = "^0.5"
hyper = "^1.6"
axum-test = "^17.3"
serial_test = "^3.0"
tempfile = "^3.0"
urlencoding = "^2.1"

[[test]]
name = "integration_tests"
required-features = ["tests"]

[[test]]
name = "security_tests"
required-features = ["tests"]

[[test]]
name = "storage_integration_tests"
required-features = ["tests"]
