[package]
name = "bedrock_sso_proxy"
version = "0.1.0"
edition = "2024"
default-run = "bedrock_proxy"
build = "build.rs"

[[bin]]
name = "bedrock_proxy"
path = "src/main.rs"

[features]
default = []
frontend = []
test-utils = []

[dependencies]
axum = "^0.8"
tower-http = { version = "^0.6", features = ["fs", "cors", "trace"] }
tokio = { version = "^1.47", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
aws-sigv4 = "^1.0"
aws-credential-types = "^1.0"
aws-smithy-runtime-api = "^1.8"
aws-config = "^1.5"
aws-types = "^1.3"
url = "^2.5"
bytes = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
cron = "^0.15"
jsonwebtoken = "^9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
postcard = { version = "1.0", features = ["alloc"] }
thiserror = "^2.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
futures-util = "^0.3"
tokio-stream = "^0.1"
config = "^0.15"
clap = { version = "^4.5", features = ["derive"] }
base64 = "^0.22"
regex = "^1.0"
rust_decimal = { version = "^1.36", features = ["serde-str"] }
once_cell = "^1.0"
async-trait = "^0.1.88"
rust-embed = { version = "^8.0", features = ["include-exclude"] }
csv = "^1.3"

# Metrics and production dependencies
metrics = "^0.24"
metrics-exporter-prometheus = "^0.17"

# OAuth dependencies
oauth2 = { version = "^5.0", features = ["reqwest"] }
uuid = { version = "^1.0", features = ["v4", "serde"] }
dashmap = "^6.1"
sha2 = "^0.10"
hex = "^0.4"
rand = "^0.9"

# Storage dependencies
redis = { version = "^0.32", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "^0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "rust_decimal",
] }
sea-orm = { version = "^1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
] }
sea-orm-migration = { version = "^1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# OpenAPI documentation dependencies
utoipa = { version = "^5.4", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "decimal",
] }
utoipa-swagger-ui = { version = "^9.0", features = ["axum"] }
serde_yaml_ng = "^0.10"

# GraphQL dependencies
async-graphql = { version = "^7.0", features = ["boxed-trait", "decimal", "chrono", "uuid", "dataloader"] }
async-graphql-axum = "^7.0"

# for macros
typed_cache_macro = { path = "typed_cache_macro" }

[build-dependencies]
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.12", features = ["json"] }
serde_json = "^1.0"
once_cell = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "^0.4"
tower = "^0.5"
hyper = "^1.6"
axum-test = "^17.3"
serial_test = "^3.0"
tempfile = "^3.0"
urlencoding = "^2.1"
pastey = "^0.1"
